--- a/src/components/BlockFree/index.module.scss
+++ b/src/components/BlockFree/index.module.scss
@@ -1,17 +1,18 @@
 .BlockFree {
-  transition: all 0.1s;
-  width: 40px;
-  height: 40px;
-  background: rgba(216, 143, 9, 0.5);
+  transition: transform 0.035s, background 0.5s, width 0.3s, height 0.3s;
   opacity: 0.5;
   display: flex;
   align-items: center;
+  background: rgba(216, 143, 9, 0.5);
   justify-content: center;
   border-radius: 5px;
-
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
   cursor: grab;
-  position: absolute;
-  z-index: 100;
+  position: fixed;
+  z-index: 9999999;
+  top: 0;
   &:active {
     cursor: -webkit-grabbing;
     opacity: 1;
