--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -10,10 +10,7 @@
         background:#CE9461
     }
     &__circle{
-        width: 65px;
-        height: 65px;
         text-align: center;
-        border-radius: 50%;
         background:#DEA057
         
     }
@@ -25,7 +22,8 @@
 .input{
     display: inline-block;
     background:#E0D8B0;
-    margin-left: 30px;
+    margin-left: 15px;
+    margin-top: 15px;
     padding: 10px;
     border-radius: 5px;
     input{
@@ -38,5 +36,6 @@
     label{
         display: inline-block;
         margin-right: 5px;
+        font-family: sans-serif,Arial, Helvetica;
     }
 }
