--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,7 +5,9 @@
     cursor: pointer;
     border:2px solid;
 
-
+    &:active{
+    transform:translateY(2px);
+    }
     &__square{
         background:#CE9461
     }
@@ -26,9 +28,12 @@
     margin-top: 15px;
     padding: 10px;
     border-radius: 5px;
+    width: 100px;
+    border:2px solid;
     input{
         margin-left: 10px;
         padding: 5px 15px;
+        width: 15px;
         &:focus{
             outline: none
         }
